# pynvme

./: .gitignore  Makefile  README.pensando.txt  conftest.py  driver_test.py  driver_test_tcp.py  install.sh  pytest.ini  requirements.txt
conf/: agentconf.json  partagentconf.json  sample_nvme_globals_config.json  sample_nvme_testcfg.json  simconf.docker-template.json  simconf.json
doc/: examples.rst  features.rst  intro.rst
scripts/: psd.py  test_examples.py
scripts/ftl/: swl_test.py  trim_test.py
scripts/pensando/batch-tests/: marker_batch_sample.txt  testnode_batch_sample.txt
scripts/pensando/platform-sanity/: connectivity.py  connectivity_test.py
scripts/pensando/py-utils/: batch.py  cParser.py  configStore.py  fence.py  nvme_parser_spec.h  validator.py
scripts/pensando/tests/: connectivity_test.py
scripts/pensando/wrappers/: configure_nvme_linux_target.sh  run_pcie_mode_local_hello_world.sh  run_sim_test.sh  run_sim_tests_batch.sh  start_agent_basic.sh  stop_agent_basic.sh
scripts/performance/: 1_fresh_perf_test.py  2_init_time_test.py  3_steady_perf_test.py  4_nvme_cmd_test.py  5_generate_report_test.py
scripts/stress/: dirty_power_cycle_test.py  endurance_test.py  marathon_test.py  reset_with_io_test.py
scripts/trace/: test_replayer.py
src/: CMakeLists.txt  Makefile  driver.c  setup.py  setup_sim.py
src/driver/common/: driver_common.c
src/driver/cython/: cdriver.pxd  driver_wrap.pyx
src/driver/include/: driver.h  sim_common.h  sim_types.h
src/driver/sim/: driver_sim.c  intr_mgt_sim.c  ioworker_sim.c  sim_completions.c  sim_logging.c  sim_utils.c
src/driver/sim/cJSON/: LICENSE
src/driver/spdk-extensions/: driver.c  intr_mgt.c  ioworker.c  ioworker_ut.c
